[tool.poetry]
name = "mhagenta"
version = "1.4.5"
description = "MHAgentA allows you to design and run simulations with containerized Modular Hybrid Agents."
authors = ["Dmitry Gnatyshak <dmitry.gnatyshak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
docker = "^7.1.0"
pika = "^1.3.2"
pika-stubs = "^0.1.3"
dill = "^0.3.9"
regex = "^2024.11.6"
fastapi = "^0.115.5"
httpx = "^0.27.2"
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.1.0"
pytest-mock = "^3.15.1"
pytest-timeout = "^2.4.0"
pytest-xdist = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"